maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: not found: value tmp
  tmp = getDirection()
  ^PledgeMaze:39: error: not found: value tmp
    setDirection(tmp)
                 ^PledgeMaze:42: error: not found: value tmp
    setDirection(tmp)
                 ^